--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
+  mask_text_input_formatter: ^1.0.6
 
 dev_dependencies:
   flutter_test:
@@ -21,4 +22,9 @@ flutter:
   uses-material-design: true
 
   assets:
-   - assets/
+   - images/
+
+  fonts:
+    - family: Source Sans Pro
+      fonts:
+        - asset: fonts/SourceSansPro-Bold.ttf
