--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
 
   cupertino_icons: ^0.1.2
   mask_text_input_formatter: ^1.0.6
+  http: ^0.12.1
 
 dev_dependencies:
   flutter_test:
