--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   mask_text_input_formatter: ^1.0.6
   http: ^0.12.1
+  rflutter_alert: ^1.0.3
 
 dev_dependencies:
   flutter_test:
